# AVSoft_2

./: AVSoftTest_2Semenov.cpp  CMakeLists.txt  Common.h  CorporateStructure.cpp  CorporateStructure.h  Employee.cpp  Employee.h
Commands/: AddCommand.h  AllCommands.h  RemoveCommand.h  SetNameCommand.h  SetPositionCommand.h  SetWageCommand.h
Patterns/: Command.h  CommandManager.h  Component.cpp  Component.h  Composite.cpp  Composite.h
